--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         android:theme="@style/Theme.TalesOfTheUnknown"
         tools:targetApi="31">
         <activity
-            android:name=".ui.Add.AddActivity"
+            android:name=".view.Add.AddActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.Auth.RegisterActivity"
+            android:name=".view.Auth.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.Auth.LoginActivity"
+            android:name=".view.Auth.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.Main.MainActivity"
+            android:name=".view.Main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
